Horizontal scroll fix

--- a/src/scss/component-styles/_modal.scss
+++ b/src/scss/component-styles/_modal.scss
@@ -9,6 +9,8 @@
   overflow-y: auto;
   padding: 10vh 0;
   display: none;
+  max-width: 100vw;
+  overflow-x: hidden;
 
   &__close {
     font-size: 0;
@@ -107,6 +109,7 @@
       height: 50%;
       max-height: 550px;
       z-index: 0;
+      overflow: hidden;
     }
 
     &--error {
